--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,7 @@ language: java
 services:
   - docker
 
-before_install:
+after_success:
   - docker build -t wu/async-api ./docker-build
+  - docker login -u="jkriptos" -p="kakarotto"
+  - docker push wu/async-api
