--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ services:
 
 after_success:
   - docker build -t wu/async-api ./docker-build
-  - docker login -u="jkriptos" -p="kakarotto"
+  - docker login -e="jkriptos+docker@gmail.com" -u="jkriptos" -p="kakarotto"
   - docker push wu/async-api
