--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
 
 after_success:
-  - docker login -e="jkriptos+docker@gmail.com" -u="jkriptos" -p="kakarotto"
-  - docker build -t wu/async-api ./docker-build
+  - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USER" -p="$DOCKER_PASSWORD"
+  - docker build -t jkriptos/async-api ./docker-build
   - docker images
-  - docker push wu/async-api
+  - docker push jkriptos/async-api
