--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ services:
 
 after_success:
   - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USER" -p="$DOCKER_PASSWORD"
-  - docker build -t jkriptos/async-api ./docker-build
+  - docker build -t jkriptos/async-api:latest ./docker-build
   - docker images
-  - docker push jkriptos/async-api
+  - docker push jkriptos/async-api:latest
